# Generic-CAM

./: .cproject  .gitignore  .project  CMakeLists.txt  COMPILING  COMPILING_UNIT_ON_UNIX.txt  COMPILING_WIN32_ON_UNIX.txt  COMPILING_WIN32_ON_WIN32.txt  GenericCAM-win32.cbp  GenericCAM.cbp  Makefile  README.md  Toolchain_Win32.cmake
doc/: Doxyfile  GenericCAM_-_Usermanual.lyx  examples.html  genericcam.hhk  genericcam.hhp  index.html  machines.html  usage.html
doc4developer/: Doxyfile
doc4user/: GenericCAMUserManual.tex  GenericCAM_-_Usermanual.lyx  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex
examples/: Bone.stl  Bunny Back.stl  Bunny Front.stl  Objects.stl  Suzanne.stl  Testblock.blend  Testblock.stl  cuts2.stl  half_sphere.stl
machines/: Milling Robot - Staeubli RX90.lua  Milling Robot - Test.lua  Router Table.lua  Router_Table.lua  Swivelhead Mill.lua  Swiveltable Mill.lua  milling_robot_staeubli_rx90.lua  testmachine.lua  testrobot.lua
src/: AboutDialog.cpp  AboutDialog.h  AffineTransformMatrix.cpp  Config.h  (+28 more)
src/project/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  FlipDrillPattern.cpp  FlipDrillPattern.h  JSON.cpp  JSON.h  Object.cpp  Object.h  ObjectPlacement.cpp  ObjectPlacement.h  Project.cpp  Project.h  ProjectView.cpp  ProjectView.h  Run.cpp  Run.h  Selection.cpp  Selection.h  Stock.cpp  Stock.h  StockFile.cpp  StockFile.h  StockMaterial.cpp  StockMaterial.h  Support.cpp  Support.h  Target.cpp  Target.h  TargetPlacement.cpp  TargetPlacement.h  Tool.cpp  Tool.h  ToolBox.cpp  ToolBox.h  ToolPath.cpp  ToolPath.h  Toolbox.cpp  Toolbox.h  Unit.cpp  (+5 more)
src/project/command/: CommandObjectDelete.cpp  CommandObjectDelete.h  CommandObjectJoinSurface.cpp  CommandObjectJoinSurface.h  CommandObjectLoad.cpp  CommandObjectLoad.h  CommandObjectRemove.cpp  CommandObjectRemove.h  CommandObjectRename.cpp  CommandObjectRename.h  CommandObjectSetColor.cpp  CommandObjectTransform.cpp  CommandObjectTransform.h  CommandProjectRename.cpp  CommandProjectRename.h  CommandRunAdd.cpp  CommandRunAdd.h  CommandRunGeneratorAdd.cpp  CommandRunGeneratorAdd.h  CommandRunGeneratorDelete.cpp  CommandRunGeneratorDelete.h  CommandRunGeneratorRename.cpp  CommandRunGeneratorRename.h  CommandRunGeneratorUpdate.cpp  CommandRunGeneratorUpdate.h  CommandRunMachineLoad.cpp  CommandRunMachineLoad.h  CommandRunMachineSet.cpp  CommandRunMachineSet.h  CommandRunRemove.cpp  CommandRunRemove.h  CommandRunRename.cpp  CommandRunRename.h  CommandRunSetBoundingBox.cpp  CommandRunSetBoundingBox.h  CommandRunSetCorrdinateSystem.cpp  CommandRunSetCorrdinateSystem.h  CommandRunSetObject.cpp  CommandRunSetObject.h  CommandRunSetStockBox.cpp  (+25 more)
src/project/command/temp/: CommandObjectSetColor.cpp  CommandObjectSetColor.h  CommandRunGeneratorDelete.cpp  CommandRunToolAdd.cpp  CommandRunToolRemove.cpp  CommandRunToolRemove.h  CommandRunWorkpieceAssign.cpp  CommandRunWorkpieceAssign.h  CommandRunWorkpieceTransform.cpp  CommandRunWorkpieceTransform.h  CommandWorkpieceDelete.h  CommandWorkpieceObjectTransform.h  CommandWorkpieceRename.h
src/project/generator/: CNCPosition.cpp  CNCPosition.h  CNCSimulator.cpp  CNCSimulator.h  DexelTarget.cpp  DexelTarget.h  Direction.cpp  Direction.h  Field.cpp  Field.h  GCodeBlock.cpp  Generator.cpp  Generator.h  GeneratorAreaGridDexel.cpp  GeneratorAreaGridDexel.h  GeneratorAreaMillingDynamic.cpp  GeneratorAreaMillingDynamic.h  GeneratorCollection.cpp  GeneratorCollection.h  GeneratorDexel.cpp  GeneratorDexel.h  GeneratorDrillDexel.cpp  GeneratorDrillDexel.h  GeneratorFactory.cpp  GeneratorFactory.h  GeneratorFast.cpp  GeneratorFast.h  GeneratorLoadFromFile.cpp  GeneratorLoadFromFile.h  GeneratorNone.cpp  GeneratorNone.h  GeneratorOutlineDexel.cpp  GeneratorOutlineDexel.h  GeneratorPanels.fbp  GeneratorPositioningDrills.cpp  GeneratorPositioningDrills.h  GeneratorSurfaceDexel.cpp  GeneratorSurfaceDexel.h  GeneratorTest.cpp  GeneratorTest.h  (+9 more)
src/project/generator/temp/: CNCInterpreter.h  DexelTarget.cpp  DexelTarget.h  FlipDrillPattern.h  GeneratorAreaGridDexel.h  GeneratorAreaMillingDynamic.cpp  GeneratorAreaMillingDynamic.h  GeneratorNone.cpp  GeneratorNone.h  GeneratorSurfaceDexel.cpp  GeneratorTest.cpp  GeneratorTest.h  ProtoToolpath.cpp  ProtoToolpath.h  ToolPath.cpp
src/project/machine/: CNCInterpreter.cpp  CNCPosition.cpp  CNCPosition.h  GCodeBlock.cpp  GCodeBlock.h  LUACodeEvaluator.cpp  LUACodeEvaluator.h  Machine.cpp  Machine.dox  Machine.h  MachineComponent.cpp  MachineComponent.h  MachinePosition.cpp  MachinePosition.h  MachineSimulator.cpp  MachineSimulator.h  NelderMeadOptimizer.cpp  NelderMeadOptimizer.h
src/project/machine/temp/: LUACodeEvaluator.cpp  Machine.cpp
src/project/post/: CollectionPostProcessor.cpp  CollectionPostProcessor.h  GenericPostProcessor.cpp  GenericPostProcessor.h  LUAPostProcessor.cpp  LUAPostProcessor.h  PostProcessor.cpp  PostProcessor.h
src/project/temp/: ObjectPlacement.cpp  ObjectPlacement.h  StockMaterial.cpp  StockMaterial.h  Support.cpp  Support.h
(+511 files in other folders)
